--- a/platform/platformio.ini
+++ b/platform/platformio.ini
@@ -8,9 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp_wroom_02]
-platform = espressif8266
-board = esp_wroom_02
+[env:esp-wrover-kit]
+# 这里可以切换为所需平台，支持：espressif8266、espressif32
+platform = espressif32
+# 这里可以切换为对应的板子
+board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
 
