--- a/server/config/database.toml
+++ b/server/config/database.toml
@@ -14,3 +14,15 @@ pass = "pass"
 database = "database"
 # 慢日志阈值（毫秒）0为不开启
 slow_log_time = 500
+
+[redis]
+#数据库类型
+type = "redis"
+#数据库地址
+host = "localhost"
+#端口
+port = 6379
+#密码
+pass = ""
+#数据库名
+database = "1"
