--- a/platform/platformio.ini
+++ b/platform/platformio.ini
@@ -8,13 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp-wrover-kit]
+[env:esp_wroom_02]
 # 这里可以切换为所需平台，支持：espressif8266、espressif32
-platform = espressif32
+platform = espressif8266
 # 这里可以切换为对应的板子
-board = esp-wrover-kit
+board = esp_wroom_02
 framework = arduino
 monitor_speed = 115200
+build_flags = -I "{PROJECT_DIR}\\include\\"
+    -I "{PROJECT_DIR}\\lib\\"
 
 lib_deps =
     links2004/WebSockets@^2.4.1
