--- a/platform/platformio.ini
+++ b/platform/platformio.ini
@@ -8,11 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp_wroom_02]
+[env:esp-wrover-kit]
 # 这里可以切换为所需平台，支持：espressif8266、espressif32
-platform = espressif8266
+platform = espressif32
 # 这里可以切换为对应的板子
-board = esp_wroom_02
+board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
 build_flags = -I "{PROJECT_DIR}\\include\\"
