--- a/platform/platformio.ini
+++ b/platform/platformio.ini
@@ -12,11 +12,13 @@
 # 这里可以切换为所需平台，支持：espressif8266、espressif32
 platform = espressif32
 # 这里可以切换为对应的板子
-board = esp-wrover-kit
+board = esp32cam
 framework = arduino
 monitor_speed = 115200
-build_flags = -I "{PROJECT_DIR}\\include\\"
+build_flags =
+    -I "{PROJECT_DIR}\\include\\"
     -I "{PROJECT_DIR}\\lib\\"
 
 lib_deps =
     cyijun/ESP32MQTTClient@^0.3.0
+    esp32-camera
