feat: 替换mqtt客户端库为PicoMQTT

--- a/platform/platformio.ini
+++ b/platform/platformio.ini
@@ -15,8 +15,10 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
-build_flags = -I "{PROJECT_DIR}\\include\\"
+build_flags =
+    -I "{PROJECT_DIR}\\include\\"
     -I "{PROJECT_DIR}\\lib\\"
 
 lib_deps =
-    cyijun/ESP32MQTTClient@^0.3.0
+    PicoMQTT
+    esp32-camera
