feat: 新增设备属性管理的实现

--- a/platform/platformio.ini
+++ b/platform/platformio.ini
@@ -12,7 +12,7 @@
 # 这里可以切换为所需平台，支持：espressif8266、espressif32
 platform = espressif32
 # 这里可以切换为对应的板子
-board = esp-wrover-kit
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 build_flags =
